--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ GOOGLE_SECRET = "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"
 MONGODB_URI="mongodb+srv://jayron097:cafe1234@cluster0.nwwhzgw.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 S3_ACCESS_KEY="AKIAW3MEDETTHW2MFNKS"
 S3_SECRET_ACCESS_KEY="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"
-SECRET="wsdgfearg"
+SECRET="awdwqfhuoaf"
